--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
-  <img src="/images/self/2.jpg" style="width:100%">
+  <img src="images/self/2.jpg" style="width:100%">
   <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
@@ -56,7 +56,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h3 class="w3-jumbo"><span class="w3-hide-small"></span> Dr. Chitresh Kumar Sharma</h3>
     <p>M.Ch. Endocrine Surgery</p>
-    <img src="/images/self/11.png" alt="boy" class="w3-image" width="992" height="1108">
+    <img src="images/self/11.png" alt="boy" class="w3-image" width="992" height="1108">
   </header>
 
   <!-- About Section -->
@@ -145,11 +145,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     
     <!-- Testimonials -->
     <h3 class="w3-padding-24 w3-text-light-grey">My Reputation</h3>  
-    <img src="../images/bandmember.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
+    <img src="images/bandmember.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
     <p><span class="w3-large w3-margin-right">Chris Fox.</span> CEO at Mighty Schools.</p>
     <p>John Doe saved us from a web disaster.</p><br>
     
-    <img src="../images/avatar_g2.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
+    <img src="images/avatar_g2.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
     <p><span class="w3-large w3-margin-right">Rebecca Flex.</span> CEO at Company.</p>
     <p>No one is better than John Doe.</p>
   <!-- End About Section -->
@@ -163,16 +163,16 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="../images/wedding.jpg" style="width:100%">
-        <img src="../images/rocks.jpg" style="width:100%">
-        <img src="../images/sailboat.jpg" style="width:100%">
+        <img src="images/wedding.jpg" style="width:100%">
+        <img src="images/rocks.jpg" style="width:100%">
+        <img src="images/sailboat.jpg" style="width:100%">
       </div>
 
       <div class="w3-half">
-        <img src="../images/underwater.jpg" style="width:100%">
-        <img src="../images/chef.jpg" style="width:100%">
-        <img src="../images/wedding.jpg" style="width:100%">
-        <img src="../images/p6.jpg" style="width:100%">
+        <img src="images/underwater.jpg" style="width:100%">
+        <img src="images/chef.jpg" style="width:100%">
+        <img src="images/wedding.jpg" style="width:100%">
+        <img src="images/p6.jpg" style="width:100%">
       </div>
     <!-- End photo grid -->
     </div>
