--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <p>Gallery</p>
   </a>
   <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fa fa-envelope w3-xxlarge"></i>
+    <!-- <i class="fa fa-envelope w3-xxlarge"></i> -->
     <p>CONTACT</p>
   </a>
 </nav>
