--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
     </p>
     
     <button class="w3-button w3-light-grey w3-padding-large w3-section">
-      <i class="fa fa-download"></i> Download Resume
+      <i class="fa fa-download"></i> 
+      <a href = "Resume.pdf" target="_blank"> Download Resume</a>
     </button>
     
     <h3 class="w3-padding-24 w3-text-light-grey">Areas of specialisation & key skills</h3>
