--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
   <!-- Footer -->
   <footer class="w3-content w3-padding-64 w3-text-black w3-xlarge">
-    <a href="https://www.facebook.com/chitreshk.sharma" target="_blank" class="w3-hover-text-green"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+    <a href="https://www.facebook.com/chitreshk.sharma" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
     <i class="fa fa-instagram w3-hover-opacity"></i>
     <!-- <i class="fa fa-snapchat w3-hover-opacity"></i> -->
     <!-- <i class="fa fa-pinterest-p w3-hover-opacity"></i> -->
