--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <!-- About Section -->
   <div class="w3-content w3-justify w3-text-black w3-padding-64" id="about">
     <h2 class="w3-text-black">About Me</h2>
-    <hr style="width:200px" class="w3-opacity">
+    <hr style="width:200px" class="w3-opacity" style="height:2px;border-width:0;color:gray;background-color:gray">
     <p class="w3-text-black">Hi, I am Dr. Chitresh Kumar Sharma (M.B.B.S., M.S., M.Ch., F.MAS., F.A.C.S.) currently working 
       as Associate Professor Surgical Oncology at AIIMS Bilaspur, Himachal Pradesh. Previously served 
       at National Cancer Institute, AIIMS, Jhajjar as Assistant Professor.
