contact form change

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     
     <p>Let's get in touch. Send me a message:</p>
 
-    <form action="https://formcarry.com/s/aefRJdU2C5Z" target="_blank" method="POST" accept-charset="UTF-8">
+    <form action="https://formcarry.com/s/aefRJdU2C5Z" target="_blank" method="POST" enctype="multipart/form-data">
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="name"></p>
       <p><input class="w3-input w3-padding-16" type="email" placeholder="Email" required name="email"></p>
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
@@ -257,12 +257,11 @@
       <p><input class="w3-input w3-padding-16" type="file" placeholder="Attach a file" id="myfile" name="myfile"></p>
       <input type="hidden" name="_gotcha">
       <p>
-        <button class="w3-button w3-light-grey w3-padding-large" type="submit">
+        <button class="w3-button w3-light-grey w3-padding-large" type="submit" value="Send">
           <i class="fa fa-paper-plane"></i> SEND MESSAGE
         </button>
       </p>
     </form>
-  <!-- End Contact Section
   </div>
   
 
