--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     
     <p>Let's get in touch. Send me a message:</p>
 
-    <form action="https://formcarry.com/s/aefRJdU2C5Z" target="_blank" method="POST" enctype="multipart/form-data">
+    <form action="https://formcarry.com/s/aefRJdU2C5Z" target="_blank" method="POST" enctype="multipart/form-data" accept-charset="UTF-8">
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="name"></p>
       <p><input class="w3-input w3-padding-16" type="email" placeholder="Email" required name="email"></p>
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
